src/objects/TIMBASURVEYS__Recipient__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__DateSendInvitation__c</fullName>
        <description>This is the date when the invitation was send to recipient.</description>
        <label>Date Send Invitation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__IPAddress__c</fullName>
        <label>IPAddress</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__InvitationPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InvitationPending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__InvitationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InvitationSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__IsPortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPortalUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__LastName__c</fullName>
        <label>LastName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Publish_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish In Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedCampaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedCase</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedContactName__c</fullName>
        <label>RelatedContactName</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedLead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedObjectId__c</fullName>
        <label>RelatedObjectId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Summary_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary_Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Recipient</relationshipLabel>
        <relationshipName>Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__WhoId__c</fullName>
        <label>WhoId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__isAnonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAnonymous</label>
        <type>Checkbox</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <label>Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipient</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>